fix spacing on login screen for error messages

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -20,3 +20,7 @@
     margin: auto;
     text-align: center;
 }
+
+.help-text {
+    margin: 5px;
+}
